# expense-calculator-rs

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.MD  build.sh  publish.sh  push_image.sh
migrations/2020-01-01-113828_create_posts/: down.sql  up.sql
migrations/2020-01-01-210747_create_users/: up.sql
migrations/2020-01-01-213450_create_expenses/: down.sql  up.sql
migrations/2020-01-10-215853_add_desc_to_expenses/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/controllers/: expenses.rs  mod.rs  users.rs
src/controllers/errors/: expenses_errors.rs  mod.rs  users_errors.rs
src/database/: expense.rs  mod.rs  user.rs
src/models/: expense.rs  mod.rs  user.rs
src/routes/: expenses.rs  mod.rs  users.rs
