[package]
name = "expense-calculator"
version = "0.1.0"
authors = ["eden"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
diesel = { version = "1.4.3", features = [ "postgres", "chrono" ] }
dotenv = "0.15.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
