[package]
name = "expense-calculator"
version = "0.1.0"
authors = ["eden"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.10", features = [ "serde" ] }
diesel = { version = "1.4.3", features = [ "postgres", "chrono" ] }
dotenv = "0.15.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-cors = "0.2.0"
failure = "0.1.6"
serde = "1.0.104"
serde_json = "1.0.44"
bcrypt = "0.6.1"
env_logger = "0.7.1"
